# OmniEye

./: .gitignore  KANBAN.md  README.md
depth-service/: README.md  requirements-dap.txt
depth-service/omni_depth/: __init__.py  cli.py  frame_extraction.py  frame_haptics.py  haptics.py  roi.py
depth-service/tests/: __init__.py  test_depth_logic.py  test_frame_extraction.py  test_frame_haptics.py  test_roi_depth.py  test_serial_cli.py
docs/: architecture.md  bringup-checklist.md  calibration.md  known-limitations.md  setup.md  wiring.md
esp32-firmware/micropython/: main.py  ssd1306.py
esp32-firmware/simulator/: __init__.py  haptic_controller.py
esp32-firmware/tests/: __init__.py  test_haptic_controller.py
scripts/: diagnose_x4_usb.ps1  list_serial_ports.ps1  run_tests.ps1  watch_x4_usb.ps1
windows-agent/: CMakeLists.txt  README.md
windows-agent/src/: main.cpp
